<resources>
    <string name="app_name">opengps</string>

    <string name="title_activity_maps">Map</string>

    <string name="behavior_below_appbar">net.dhleong.opengps.ui.behavior.BelowAppBarBehavior</string>

    <string name="airway_select">Select Airway</string>
    <string name="airway_select_exit">Select Exit</string>
    <string name="airway_load">Load Airway</string>

    <string name="fpl_add_waypoint">Add Waypoint</string>
    <string name="fpl_waypoint_insert_before">Insert before</string>
    <string name="fpl_waypoint_remove">Remove</string>
    <string name="fpl_waypoint_info">Info</string>
    <string name="fpl_waypoint_load_airway">Load Airway</string>
    <string name="fpl_waypoint_remove_after">Remove all after</string>
    <string name="fpl_waypoint_tune">Tune Nav1 Standby</string>

    <string name="waypoint_input_hint">Waypoint Identifier</string>
    <string name="waypoint_multiple_title">Multiple Matches</string>

    <string name="airport_page_info">INFO</string>
    <string name="airport_page_info_elevation">ELEVATION</string>
    <string name="airport_page_info_charts">Charts</string>
    <string name="airport_page_frequencies">FREQUENCIES</string>
    <string name="airport_page_wx">WEATHER</string>
    <string name="airport_page_wx_wind_calm">Wind Calm</string>
    <string name="airport_page_wx_wind">Wind %1$03d&#176; at %2$d KT</string>
    <string name="airport_page_wx_visibility">Visibility %1$.0f SM</string>
    <string name="airport_page_wx_temp_and_dew">Temp %1$.0f&#176;C / Dewpoint %2$.0f&#176;C</string>
    <string name="airport_page_wx_altimeter">Altimeter %1$.2f\"</string>
    <string name="airport_page_wx_metar_header">Raw METAR</string>
    <string name="airport_page_wx_sky_clear">Sky Clear</string>

    <string name="home_title_flight_plan">Flight Plan</string>
    <string name="home_title_settings">Settings</string>
    <string name="home_title_waypoint_info">Waypoint</string>
    <string name="home_title_map">Map</string>
    <string name="home_title_preferred_routes">FAA Routes</string>

    <string name="prefs_main_interface">Interface</string>
    <string name="prefs_main_screen">Keep Screen On</string>
    <string name="prefs_main_connection">Connection</string>
    <string name="prefs_main_connection_type">Type</string>
    <string name="prefs_main_connection_host">Host</string>
    <string name="prefs_main_connection_port">Port</string>

    <string name="conn_status_connecting">Connecting</string>
    <string name="conn_status_disconnected">Disconnected</string>
    <string name="conn_status_connected">Connected</string>

    <string name="waypoint_distance_label">DIS:</string>
    <string name="waypoint_bearing_label">BRG:</string>

    <string name="navaid_frequency_label">Frequency:</string>
    <string name="charts_error">Unable to load charts</string>
    <string name="routes_origin">Origin</string>
    <string name="routes_destination">Destination</string>
    <string name="routes_none_found">No routes found</string>
    <string name="routeinfo_load">Load Route</string>

    <string name="tuner_backspace">Backspace</string>
    <string name="tuner_activate">Activate</string>
    <string name="tuner_enter">Standby</string>

    <string name="status_all_ready">Ready!</string>
    <string name="status_ready">%1$s: READY</string>
    <string name="status_raw_init">%1$s: Downloading dataset</string>
    <string name="status_raw_update">%1$s: Updating dataset</string>
    <string name="status_raw_fetched">%1$s: Fetched Dataset</string>
    <string name="status_airports">%1$s: Loaded Airports</string>
    <string name="status_storage_ready">Prepared Cache</string>
    <string name="status_navaids">%1$s: Loaded Navaids</string>
    <string name="status_airways">%1$s: Loaded Airways</string>
    <string name="status_charts">%1$s: Loaded Charts</string>
    <string name="status_error">ERROR: %1$s</string>

</resources>
