<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO SimConnect/etc. settings -->
    <PreferenceCategory
        android:title="@string/prefs_main_connection">
        <ListPreference
            android:key="pref_connection_type"
            android:title="@string/prefs_main_connection_type"
            android:defaultValue="NONE"
            android:entries="@array/pref_connection_types"
            android:entryValues="@array/pref_connection_type_values"
            tools:summary="None"
            />

        <EditTextPreference
            android:key="pref_connection_host"
            android:title="@string/prefs_main_connection_host"
            android:inputType="textUri"
            />

        <EditTextPreference
            android:key="pref_connection_port"
            android:title="@string/prefs_main_connection_port"
            android:inputType="number"
            />
        <!--android:defaultValue="4567"-->

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/prefs_main_interface">

        <CheckBoxPreference
            android:key="pref_main_screen"
            android:title="@string/prefs_main_screen" />
    </PreferenceCategory>
</PreferenceScreen>